# trip_info_back

./: .gitignore  README.md  docker-compose.yml  run-system.sh
api/: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  prerun-config.sh  run-api.sh  run-local.sh
api/src/: db.rs  db_lib.rs  lib.rs  main.rs  models.rs  serde_types.in.rs  serde_types.rs
api/tests/: api_endpoints.rs  api_endpoints_helper.rs
db/: .env  Cargo.toml  Dockerfile  init.sh  init.sql  initdb.js  initdb.sql
