[profile.dev]
debug = true

[package]
name = "api"
version = "0.0.1"
authors = ["Vignesh Sankaran <developer@ferndrop.com>"]
build = "build.rs"

[lib]
name = "prebuild"
path = "prebuild.rs"

[build-dependencies]
diesel_codegen_syntex = { version = "0.9.0", features = ["postgres"] }
serde_codegen = "0.8.21"
runas = "0.1.1"

[dev-dependencies]
hyper = "0.10.4"
hyper-openssl = { git = "https://github.com/sfackler/hyper-openssl.git" } 
openssl = "0.9.6"

[dependencies]
iron = "0.5.1"
router = "0.5.1"
hyper-native-tls = "0.2.*"
uuid = { version = "0.3.1", features = ["v4"] }
serde = "0.8.18"
serde_json = "0.8.*"
diesel = "0.9.1"
dotenv = "0.8.0"