[profile.dev]
debug = true

[package]
name = "trip_info_api"
version = "0.0.1"
authors = ["Vignesh Sankaran <developer@ferndrop.com>"]
build = "build.rs"

[lib]
name = "prebuild"
path = "prebuild.rs"

[build-dependencies]
serde_codegen = "0.8.21"
runas = "0.1.1"
openssl = "0.9.*"
time = "0.1.*"

[dev-dependencies]
hyper = "0.10.*"
hyper-openssl = { git = "https://github.com/sfackler/hyper-openssl.git" } 
openssl = "0.9.*"

[dependencies]
iron = "0.5.*"
router = "0.5.*"
hyper-native-tls = "0.2.*"
uuid = { version = "0.3.1", features = ["v4"] }
serde = "0.9.*"
serde_derive = "0.9.*"
serde_json = "0.9.*"
diesel = { version = "0.11.*", features = ["postgres"] }
diesel_codegen = { version = "0.11.*", features = ["postgres"] }
dotenv = "0.8.0"